Changed Bootstrap URL to HTTPS

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 <script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
 <!-- CodePen project embed -->
   <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
-<script src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js'></script>
+<script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js'></script>
 
   
 
