changed padding for skillset boxes

--- a/index.html
+++ b/index.html
@@ -89,9 +89,7 @@
                            <li>Git and Github</li>
                         <li>JIRA</li>
                         <li>Balsamiq (wireframing/mockups)</li>
-                        <li>Adobe Photoshop</li>
-                            <li>Adobe Illustrator</li>
-                                <li>Adobe XD</li>
+                        <li>Adobe Photoshop, Adobe Illustrator, and Adobe XD</li>
                                 <li>Drupal and Wordpress CMS</li>
                                 <li>Google and Adobe Analytics</li>
                                 <li>Heroku (using Postgres database and New Relic)</li>
