modified other skills skillset

--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
                <div class="skillset"><p>Other experience includes</p>
                     <ul>
                         <li>Agile methodology</li> 
-                        <li>UI/UX design patterns</li>
+                        <li>UI/UX principles, development, and design patterns</li>
                         <li>SEO and accessibility best practices</li>
                     <li>Technical project management</li>
-                    <li>Large-scale content management</li>
-                        <li>Information architecture and taxonomies</li> 
+                          <li>Information architecture and taxonomies</li> 
+                    <li>Content management</li>
                         <li>Professional leadership and mentoring</li></ul></p></div>
                     </div>
 							
