modified other skills skillset again

--- a/index.html
+++ b/index.html
@@ -78,15 +78,15 @@
                 <h2>Skills and Experience</h2>
 						<div class="skillset-group">
                             
-                <div class="skillset"><p>Coding experience includes<ul>
-                   <li>Responsive, accessible (WCAG 2.0 AA) and HTML5-based web design</li>
+                <div class="skillset"><p>Development<ul>
+                   <li>Responsive, accessible (WCAG 2.0 AA) and HTML5-based web development and design</li>
                     <li>Ruby/Ruby on Rails</li>
                     <li>Javascript (ES6 and ES5) and jQuery</li><li>
                     <li>CSS3 (including CSS Grid/Flexbox and pre-processors SCSS and LESS)</li><li>Bootstrap 4</li>
                     <li>Currently learning React</li>
                 </ul></p></div>
                 
-                <div class="skillset"><p>Software and development tool experience includes</p> 
+                <div class="skillset"><p>Software and Tools</p> 
                     <ul>
                            <li>Git and Github</li>
                         <li>JIRA</li>
@@ -97,10 +97,10 @@
                                 <li>Heroku (using Postgres database and New Relic)</li>
                     </ul></p></div>
 
-               <div class="skillset"><p>Other experience includes</p>
+               <div class="skillset"><p>Other</p>
                     <ul>
                         <li>Agile methodology</li> 
-                        <li>UI/UX principles, development, and design patterns</li>
+                        <li>UI/UX principles, development, and design</li>
                         <li>SEO and accessibility best practices</li>
                     <li>Technical project management</li>
                           <li>Information architecture and taxonomies</li> 
