modified tools skillset

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <ul>
                            <li>Git and Github</li>
                         <li>JIRA</li>
-                        <li>Balsamiq (wireframing/mockups)</li>
+                        <li>Balsamiq</li>
                         <li>Adobe Photoshop, Adobe Illustrator, and Adobe XD</li>
                                 <li>Drupal and Wordpress CMS</li>
                                 <li>Google and Adobe Analytics</li>
